Fix readability for guide author and rating labels

--- a/wok_site/media/css/lg2.css
+++ b/wok_site/media/css/lg2.css
@@ -279,3 +279,8 @@ body {
     font-size: 8pt;
     color: #bbb;
 }
+
+.label {
+    text-shadow: none;
+    font-weight: 600;
+}
